Archive2/0e/715f91a05c258a/output
main.cpp:44:17: error: reference to type 'const Derived' could not bind to an lvalue of type 'const char [9]'
    a.operator=("String B");    // aka: a = "String B";
                ^~~~~~~~~~
main.cpp:34:7: note: passing argument to parameter here
class Derived : public Base
      ^
1 error generated.
